part4/main-pingpong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: main
  name: hashgenerator-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgenerator
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      volumes: # Define volume
        - name: shared-image
          emptyDir: {}
        - name: config
          configMap:
              name: project-configmap
      containers:
        - name: hash-reader
          image: laurihakala/hash-reader:81d8de955277
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
          resources:
            limits:
              cpu: "150m"
              memory: "100Mi"
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /healtz
               port: 3000
        - name: hash-writer
          image: laurihakala/hash-writer:f8048e5c4dc8
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
          resources:
            limits:
              cpu: "150m"
              memory: "100Mi"
