part4/main-pingpong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: main
  name: hashgenerator-svc
spec:
  type: NodePort
  selector:
    app: hashgenerator
  ports:
    - name: http
      port: 2345
      protocol: TCP
      targetPort: 3000
