part4/main-pingpong/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: main
  name: hashgenerator-material-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hashgenerator-svc
          servicePort: 2345
      - path: /pingpong
        backend:
          serviceName: pingpong-svc
          servicePort: 80
